# UPS-Orchestrator

./: .gitignore  README.md  pyproject.toml
client_windows/: __init__.py  config.py  listener.py  main.py  notifications.py  power_actions.py  state_manager.py
config/: example.toml
docs/: protocol.md
scripts/: pre-shutdown.sh.example
server/: __init__.py  actions.py  config.py  device_registry.py  event_dispatcher.py  journal.py  main.py  policy_engine.py  runtime.py  state_manager.py  ups_monitor.py
shared/: __init__.py  models.py
tests/: test_audit_journal.py  test_commit_logic.py  test_dispatch_retries.py  test_event_dispatcher.py  test_linux_dispatcher.py  test_orchestrator_runtime.py  test_server_config.py  test_shutdown_plan.py  test_state_machine.py  test_ups_monitor.py  test_windows_listener.py  test_windows_policy.py
